--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -89,13 +89,12 @@
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                     <!-- Links -->
                     <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                    <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
+                    <p><i class="fas fa-home me-3"></i>up,gandhi nagar telibagh lucknow,india</p>
                     <p>
                         <i class="fas fa-envelope me-3"></i>
-                        info@example.com
+                        geelucknow@gmail.com
                     </p>
-                    <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-                    <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
+                    <p><i class="fas fa-phone me-3"></i>7007703489</p>
                 </div>
                 <!-- Grid column -->
             </div>
@@ -107,7 +106,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
         © 2021 Copyright:
-        <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+        <a class="text-reset fw-bold" href="https://s-k-ecommercei.onrender.com">s-k-ecommercei.onrender.com</a>
     </div>
     <!-- Copyright -->
 </footer>
