--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -6,8 +6,8 @@
           <option value="en-us">EN-US</option>
         </select>
         <span
-          class="d-none d-lg-inline-block d-md-inline-block d-sm-inline-block d-xs-none me-3"><strong>info@somedomain.com</strong></span>
-        <span class="me-3"><i class="fa-solid fa-phone me-1 text-warning"></i> <strong>1-800-123-1234</strong></span>
+          class="d-none d-lg-inline-block d-md-inline-block d-sm-inline-block d-xs-none me-3"><strong>geelucknow@gmail.com</strong></span>
+        <span class="me-3"><i class="fa-solid fa-phone me-1 text-warning"></i> <strong>7007703489</strong></span>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 d-none d-lg-block d-md-block-d-sm-block d-xs-none text-end">
         <span class="me-3"><i class="fa-solid fa-truck text-muted me-1"></i><a class="text-muted"
