--- a/templates/views/changeNumber.hbs
+++ b/templates/views/changeNumber.hbs
@@ -306,6 +306,7 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     <script src="/js/common.js"></script>
+     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/userSettings.js"></script>
     <script>
 
